--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<p><a href=''https://github.com/Hamzah7878/pdf-faker/blob/main/Shakeel%20Ahmed.pdf''>Click Here Event Info</a></p>
+<p><a href=''Shakeel%20Ahmed.pdf''>Click Here Event Info</a></p>
 </html>
